[package]
name = "qrs"
version = "0.1.0"
edition = "2024"
description = "Rust CLI that prints QR codes to your terminal."
license = "MIT"
repository = "https://github.com/July-Tea/qrs"
homepage = "https://github.com/July-Tea/qrs"
authors = ["July-Tea <juratjan123@outlook.com>"]
keywords = ["qr", "qrcode", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
qrcode = "0.12"
image = "0.24"

[[bin]]
name = "qrs"
path = "src/main.rs"



  