[package]
name = "qrt"
version = "0.1.4"
edition = "2024"
description = "Rust CLI that prints QR codes to your terminal."
license = "MIT"
repository = "https://github.com/July-Tea/qrt"
homepage = "https://github.com/July-Tea/qrt"
authors = ["July-Tea <juratjan123@outlook.com>"]
keywords = ["qr", "qrcode", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
qrcode = "0.12"
image = { version = "0.25", features = ["png"] }
rqrr = "0.7"

[[bin]]
name = "qrt"
path = "src/main.rs"



  
